2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed some monitor
	status queries.

2010-05-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Make sure the agent exists
	  when searching by IP address. Fixes bug #2957130.

	* util/pandora_db.pl: Fixed bug #2957130.

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* man/man1/tentacle.1.gz: Deleted old man page

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* pandora_server_installer
	  man/man1/tentacle_server.1.gz: Improved the
	  manpages installation splitting tentacle man
	  page

	* man/man1/tentacle_server.1
	 man/man3: Old man pages removed


2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed unknown monitors
	query for bug: 3000460

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a log message in
	  pandora_process_module.

2010-05-11  Sergio Martin <sergio.martin@artica.es>

	* pandora_server_installer
	man/man1/pandora_server.1.gz
	man/man1/tentacle.1.gz: Added the man pages of
	tentacle and pandora server and modified the
	server installer script to install them

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a log message in
	  pandora_process_module.

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/Core.pm,
          lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Fixed
          bug #2941736. Made pandora_update_module_on_error set
          tagente_estado.current_interval.

2010-05-11  Sancho Lerena <slerena@artica.es>

	* util/plugin/bgp_plugin.pl: New plugin: Connect the device via SNMP
	and performs a check of each BGP connection to verify its active
	status. If cannot connect or BGP has no connection or a single
	connection its down, returns a CRITICAL state. It uses password to
	provide SNMP community for device. It should work with SNMP v1 and v2c
