@@ -1,6 +1,9 @@
 #############################################################################
 # Pandora FMS Server Parameters
 # Pandora FMS, the Flexible Monitoring System.
+# Version 3.1
+# Licensed under GPL license v2,
+# (c) 2003-2010 Artica Soluciones Tecnologicas
 # http://www.pandorafms.com
 # Please change it for your setup needs
 #############################################################################
