@@ -1,10 +1,10 @@
 #!/bin/bash
 
-# Pandora FMS Server Upgrader (c) 2008-2009 Artica ST
+# Pandora FMS Server Upgrader (c) 2008-2010 Artica ST
 # Linux Version (generic), for SuSe and Debian/Ubuntu only
 # other Linux distros could not work properly without modifications
 # Please see http://www.pandorafms.org
-# v3.0.1 Build 091218
+# v3.1.0 Build 100516
 # This code is licensed under GPL 2.0 license.
 # **********************************************************************
 
@@ -65,7 +65,7 @@ help () {
 
 # Script banner at start
 echo " "
-echo "Pandora FMS 3.0 Server Upgrade (c) 2009 Artica ST"
+echo "Pandora FMS 3.1 Server Upgrade (c) 2009-2010 Artica ST"
 echo "This program is licensed under GPL2 Terms. http://pandorafms.org"
 echo " "
 
